MDEV-35437 Suppress "This function has the same name" warnings in I_S queries

Sending "This function has the same name" during I_S quries was too verbose.
Suppressing these warnings.

Now warnings are sent only during CREATE FUNCTION and during function call.